--- a/index.html
+++ b/index.html
@@ -53,13 +53,25 @@
   </tr>
 </table>
 
-<a class="ui-button ui-widget ui-corner-all" href="#" onclick='Prev_Core_Value();'>Prev</a> 
-<a class="ui-button ui-widget ui-corner-all" href="#" onclick='Next_Core_Value();'>Next</a>
+<a class="ui-button ui-widget ui-corner-all" href="#" onclick='Prev_Core_Value();'><< Prev</a> 
+<a class="ui-button ui-widget ui-corner-all" href="#" onclick='Next_Core_Value();'>Next >></a>
 <br><br>   
 <a class="ui-button ui-widget ui-corner-all" href="#" onclick='Undo();'>Undo</a>
-<br><br>   
-<a href="mailto:vpelss@gmail.com?subject=ghfgdf&body=ghfhfh\njfghfgh" target="_blank"> mail </a>
+<br><br> 
   
+<a class="ui-button ui-widget ui-corner-all" href="#" onclick='Reset_Choices();'>Reset Choices</a>
+<br><br> 
+  
+<form>
+ <textarea id="JSONSave" rows="3" cols="50" placeholder="Import/Export/Backup/Modify Core Value  List. Save the text generated in a safe location." title='You can import/export your current Core Value list (which is saved in the local cookie). This is helful to move it to another computer or use it as a backup.'></textarea>
+  <br>
+  <input type='button' value='Get Alias List' onclick="GetAliasList()">
+  <input type='button' value='Save Alias List' onclick="SaveAliasList()">
+  <input type='button' value='Reset Alias List' onclick="if(confirm('This will reset to Default list. Any words you have added or removed will be reverted. Are you sure?')){ResetAliasList()}">
+</form>
+  
+ <br><br>  
+<a href="mailto:vpelss@gmail.com?subject=ghfgdf&body=ghfhfh\njfghfgh" target="_blank"> mail </a>
 <pre> 
 value: definition : color
 
@@ -77,6 +89,7 @@ value: definition : color
 </pre>
   
 <script>
+var values_list_array = [];
 var count = {}; //eg: count.yes = 50;
   
 var values_list_text = `
@@ -84,52 +97,272 @@ Love : What is love? : red
 
 Trust : never do this  
 Soup: liquid heat : rose
-`;
+Acceptance
+Accomplishment
+Accountability
+Accuracy
+Achievement
+Adaptability
+Alertness
+Altruism
+Ambition
+Amusement
+Assertiveness
+Attentive
+Awareness
+Balance
+Beauty
+Boldness
+Bravery
+Brilliance
+Calm
+Candor
+Capable
+Careful
+Certainty
+Challenge
+Charity
+Cleanliness
+Clear
+Clever
+Comfort
+Commitment
+Common sense
+Communication
+Community
+Compassion
+Competence
+Concentration
+Confidence
+Connection
+Consciousness
+Consistency
+Contentment
+Contribution
+Control
+Conviction
+Cooperation
+Courage
+Courtesy
+Creation
+Creativity
+Credibility
+Curiosity
+Decisive
+Decisiveness
+Dedication
+Dependability
+Determination
+Development
+Devotion
+Dignity
+Discipline
+Discovery
+Drive
+Effectiveness
+Efficiency
+Empathy
+Empower
+Endurance
+Energy
+Enjoyment
+Enthusiasm
+Equality
+Ethical
+Excellence
+Experience
 
-var values_list_lines_array = values_list_text.split(/\r?\n/);
-var core_Value_Index = 0;
-  
-//build values_list
-var values_list_array = [];
-for (var line of values_list_lines_array) {
-  if (line.trim() === '') continue; //remove blank lines  
+Exploration
+Expressive
+Fairness
+Family
+Famous
+Fearless
+Feelings
+Ferocious
+Fidelity
+Focus
+Foresight
+Fortitude
+Freedom
+Friendship
+Fun
+Generosity
+Genius
+Giving
+Goodness
+Grace
+Gratitude
+Greatness
+Growth
+Happiness
+Hard work
+Harmony
+Health
+Honesty
+Honor
+Hope
+Humility
+Humor
+Imagination
+Improvement
+Independence
+Individuality
+Innovation
+Inquisitive
+Insightful
+Inspiring
+Integrity
+Intelligence
+Intensity
+Intuitive
+Joy
+Justice
+Kindness
+Knowledge
+Lawful
+Leadership
+Learning
+Liberty
+Logic
+Love
+Loyalty
+Mastery
+Maturity
+Meaning
+Moderation
+Motivation
+Openness
+Optimism
+Order
+Organization
+Originality
+Passion
+Patience
+Peace
+Performance
+Persistence
+Playfulness
+Poise
+Potential
+Power
+
+Present
+Productivity
+Professionalism
+Prosperity
+Purpose
+Quality
+Realistic
+Reason
+Recognition
+Recreation
+Reflective
+Respect
+Responsibility
+Restraint
+Results-oriented
+Reverence
+Rigor
+Risk
+Satisfaction
+Security
+Self-reliance
+Selfless
+Sensitivity
+Serenity
+Service
+Sharing
+Significance
+Silence
+Simplicity
+Sincerity
+Skill
+Skillfulness
+Smart
+Solitude
+Spirit
+Spirituality
+Spontaneous
+Stability
+Status
+Stewardship
+Strength
+Structure
+Success
+Support
+Surprise
+Sustainability
+Talent
+Teamwork
+Temperance
+Thankful
+Thorough
+Thoughtful
+Timeliness
+Tolerance
+Toughness
+Traditional
+Tranquility
+Transparency
+Trust
+Trustworthy
+Truth
+Understanding
+Uniqueness
+Unity
+Valor
+Victory
+Vigor
+Vision
+Vitality
+Wealth
+Welcoming
+Winning
+Wisdom
+Wonder
+`;
+   
+function Build_values_list( text ){
+for(var line of text.split(/\r?\n/)){ //for each line
+  if (line.trim() === '') {continue}; //remove blank lines
   var line_array = line.split(':');
-  values_list_array[core_Value_Index] = {};
-  var core_value_word;
+  var definition = '';
+  var colour = '';
   if (typeof line_array[0] !== 'undefined'){
-    core_value_word = line_array[0].trim(); 
-    values_list_array[core_Value_Index] = {};
-    values_list_array[core_Value_Index].word = core_value_word;
-    values_list_array[core_Value_Index].ynm = 'maybe';
+       if (typeof line_array[1] !== 'undefined'){
+         definition = line_array[1].trim();
+       }
+       if (typeof line_array[2] !== 'undefined'){
+         colour = line_array[2].trim();
+       }
+      values_list_array.push( {'word':line_array[0].trim() , 'definition':definition , 'colour':colour , 'ynm':'maybe' } );
+   }
+   else{
+       console.log('Missing core_value');
+   }
   }
-  else{
-    console.log('Missing core_value');
-  }
-  var core_value_definition;
-  if (typeof line_array[1] !== 'undefined'){
-    core_value_definition = line_array[1].trim(); 
-    values_list_array[core_Value_Index].definition = core_value_definition;
-   }
-  else{
-    console.log('Missing  core_value_definition for ' + core_value_word);
-   }
-  var core_value_color;
-  if (typeof line_array[2] !== 'undefined'){
-    core_value_color = line_array[2].trim(); 
-    values_list_array[core_Value_Index].color = core_value_color;
-   }
-  else{
-    console.log('Missing core_value_color for ' + core_value_word);
-  } 
-core_Value_Index++;
 } 
 
-//------------------------------------------------------
-//start here
+function Build_values_text( values_list_array ){
+  var text = '';
+  for(var value of values_list_array){ //for each value
+    var line = '' + value.word + ':' + value.definition + ':' + value.colour + '\r\n';
+    text = text + line;
+  }
+  return text;
+} 
+  
+Build_values_list( values_list_text );
+  
 values_list_array_filter = 'all';
 function Set_New_Filter(filter){
-values_list_array_filter = filter;
-Next_Core_Value();
+  values_list_array_filter = filter;
+  if( values_list_array[0].ynm === filter ){
+    Display_Core_Value(); 
+    return;
+  } //stay on same Core Value if we are the right type
+  Next_Core_Value();
 }
   
 function Count_Core_Values(){
@@ -138,10 +371,9 @@ function Count_Core_Values(){
   count.no = 0;
   count.maybe = 0;
   count.all = 0;
-  for (var index in values_list_array){
-    var ynm = values_list_array[index].ynm;
-    //if ( isNaN(count[ynm]) ) {count[ynm] = 0}; //must ensure object is a number
-    count[ynm] = 1 + count[ynm];
+  for (var value of values_list_array){
+    var ynm = value.ynm;
+    count[ynm] = 1 + count[ynm]; //must ensure object is a number
     count['all']++;
   }
   $('#count_yes').html( count.yes );
@@ -159,8 +391,9 @@ function Next_Core_Value(){
   }
  else{
      Erase_Core_Value();
-     alert('No Core Values listed as ' + values_list_array_filter);
+     alert('There are no Core Values listed as: ' + values_list_array_filter);
  }
+VarToCookie();
 }
   
 function Prev_Core_Value(){ 
@@ -199,10 +432,64 @@ function Undo(){
   Display_Core_Value();
 }
   
+function CookieToVar()
+{  
+if( supports_html5_storage() == false ) {return} 
+if( typeof localStorage['Core_Values'] === 'undefined' ) {return } //nothing to restore. use var
+var test = localStorage['Core_Values'];
+values_list_array = JSON.parse( localStorage['Core_Values'] );
+} 
+  
+function VarToCookie(){
+if( supports_html5_storage() == false ) {return} 
+localStorage['Core_Values'] = JSON.stringify( values_list_array );
+}
+  
+function GetAliasList()
+{
+CookieToVar();
+document.getElementById("JSONSave").value = Build_values_text( values_list_array )
+}
+  
+function SaveAliasList(){
+  if(false === confirm('This will change your list based on the text you entered. Are you sure?')){return};
+  values_list_array=[];
+  Build_values_list( document.getElementById("JSONSave").value );  
+  VarToCookie();
+  Count_Core_Values();
+  Display_Core_Value();  
+}
+  
+function ResetAliasList(){
+  values_list_array = [];
+  Build_values_list( values_list_text );  
+  VarToCookie();
+  Count_Core_Values();
+  Display_Core_Value();   
+}
+  
+function supports_html5_storage() {
+  try {
+    return 'localStorage' in window && window['localStorage'] !== null;
+  } catch (e) {
+    return false;
+  }
+}
+  
+function Reset_Choices(){
+  if( false == confirm('This will reset ALL changes to your choices and cannot be undone. (y/n)') ){ return }
+  for(var value of values_list_array){ value.ynm = 'maybe'; }
+  localStorage['Core_Values'] = null;
+  Display_Core_Value();  
+  Count_Core_Values();
+  VarToCookie();
+}
+ 
+CookieToVar();
 Display_Core_Value();  
 Count_Core_Values();
-  
-//console.log(values_list_array);
-</script>yurts
+
+console.log('');
+</script>a
   </body>
 </html>
